--- a/mobile/index.html
+++ b/mobile/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EM Furniture | Mobile</title>
-  <link rel="stylesheet" href="m_gulp.css">
   <link rel="stylesheet" href="keyframes.scss">
+  <link rel="stylesheet" href="m_gulp.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="../node_modules/slick-carousel/slick/slick.css">
@@ -16,8 +16,6 @@
   <div ng-controller="MainController">
     <div class="topNavigation" ng-include="'pages/topNavigation.html'"></div>
     <div class="navigation" ng-include="'navigation/navigation.html'"></div>
-    <!-- <div class="main-content" ng-include="'pages/main-content.html'"></div>
-    <div class="about-us" ng-include="'pages/about-us.html'"></div> -->
     <div class="footer" ng-include="'pages/footer.html'"></div> 
   </div>
 
@@ -27,7 +25,7 @@
   <script src="/node_modules/angular/angular.js"></script> 
   <script src="/node_modules/slick-carousel/slick/slick.js"></script> 
   <script src="/node_modules/angular-slick-carousel/dist/angular-slick.min.js"></script> 
-  <script src="app.js"></script>
+  <script src="index.js"></script>
   <script src="navigation/navigation.js"></script>
   <script src="carousel.js"></script>
 </body>
