dependencies, updates, gulp

--- a/mobile/pages/footer.html
+++ b/mobile/pages/footer.html
@@ -7,11 +7,11 @@
       <div class="direct-contact">
          <div class="dc-container">
             <img src="/assets/footer/phone.svg" alt="">
-            <p>Available soon!</p>
+            <p>(+63) 950-613-3018</p>
          </div>
          <div class="dc-container">
             <img src="/assets/footer/location.svg" alt="">
-            <p>Pawili, Bula, Camarines Sur</p>
+            <p>Pawili Bula, Camarines Sur</p>
          </div>
          <div class="dc-container">
             <img src="/assets/footer/email.svg" alt="">
