--- a/mobile/index.html
+++ b/mobile/index.html
@@ -20,6 +20,7 @@
     <div class="footer" ng-include="'pages/footer.html'"></div> 
   </div>
 
+  <script src="/node_modules/ng-dialog/js/ngDialog.min.js"></script> 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
   <script src="/node_modules/jquery/jquery.js"></script> 
@@ -28,6 +29,6 @@
   <script src="/node_modules/angular-slick-carousel/dist/angular-slick.min.js"></script> 
   <script src="index.js"></script>
   <script src="navigation/navigation.js"></script>
-  <script src="carousel.js"></script>
+  <script src="pages/gallery.js"></script>
 </body>
 </html>
