--- a/mobile/index.html
+++ b/mobile/index.html
@@ -6,7 +6,7 @@
   <title>EM Furniture | Mobile</title>
   <link rel="stylesheet" href="keyframes.scss">
   <link rel="stylesheet" href="m_index.css">
-  <link rel="stylesheet" href="master.css">
+  <link rel="stylesheet" href="/master.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="../node_modules/slick-carousel/slick/slick.css">
