web-workspace-init

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EM Furniture | Web</title>
-  <link rel="stylesheet" href="master.css">
+  <link rel="stylesheet" href="/master.css">
+  <link rel="stylesheet" href="/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="../node_modules/slick-carousel/slick/slick.css">
@@ -12,9 +13,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script> 
 </head>
 <body>
-  <h1>Hello!</h1>
-  <p>Testing 1,2,3</p>
+  <div ng-controller="MainController">
+    <div class="topNavigation" ng-include="'pages/topNavigation.html'"></div>
+    <div class="navigation" ng-include="'pages/navigation.html'"></div>
+    <div class="footer" ng-include="'pages/footer.html'"></div> 
+  </div>
 
+  <script src="/node_modules/ng-dialog/js/ngDialog.min.js"></script> 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
   <script src="/node_modules/jquery/jquery.js"></script> 
@@ -22,7 +27,6 @@
   <script src="/node_modules/slick-carousel/slick/slick.js"></script> 
   <script src="/node_modules/angular-slick-carousel/dist/angular-slick.min.js"></script> 
   <script src="index.js"></script>
-  <script src="navigation/navigation.js"></script>
-  <script src="carousel.js"></script>
+  <script src="pages/navigation.js"></script>
 </body>
 </html>
