--- a/mobile/pages/contact-us.html
+++ b/mobile/pages/contact-us.html
@@ -3,7 +3,13 @@
     <p>We’d love to hear from you! Whether you have a question about our products, need assistance with an order, or want to discuss customization option, our team is here to help. </p>
     <div class="information">
         <img src="contact-us-asset/email.svg" alt="">
-        <span>@emfurniture.com</span>
+            <span>@emfurniture.com</span>
+        <img src="contact-us-asset/contact.svg" alt="">
+            <span>+63********* </span>
+        <img src="contact-us-asset/location.svg" alt="">
+            <span>Pawili, Bula Camarines Sur</span>
+        <img src="contact-us-asset/Business_Time.svg" alt="">
+            <span>Monday- friday (7:30 am - 5:00pm)</span>
     </div>
 
    
