--- a/mobile/pages/contact-us.html
+++ b/mobile/pages/contact-us.html
@@ -1,6 +1,7 @@
 <div class="contact-us-container">
     <h2>Get in Touch</h2>
-    <p>We’d love to hear from you! Whether you have a question about our products, need assistance with an order, or want to discuss customization option, our team is here to help. </p>
+    <div class="p_conct">
+        <p>We’d love to hear from you! Whether you have a question about our products, need assistance with an order, or want to discuss customization option, our team is here to help. </p></div>
     <div class="information">
         <img src="contact-us-asset/email.svg" alt="">
             <span>@emfurniture.com</span>
