--- a/mobile/pages/contact-us.html
+++ b/mobile/pages/contact-us.html
@@ -3,14 +3,22 @@
     <div class="p_conct">
         <p>We’d love to hear from you! Whether you have a question about our products, need assistance with an order, or want to discuss customization option, our team is here to help. </p></div>
     <div class="information">
-        <img src="contact-us-asset/email.svg" alt="">
+        <div class="email">
+            <img src="pages/contact-us-asset/email.svg" alt="">
             <span>@emfurniture.com</span>
-        <img src="contact-us-asset/contact.svg" alt="">
+        </div>
+        <div class="phone">
+            <img src="pages/contact-us-asset/contact.svg" alt="">
             <span>+63********* </span>
-        <img src="contact-us-asset/location.svg" alt="">
+        </div>
+        <div class="address">
+            <img src="pages/contact-us-asset/location.svg" alt="">
             <span>Pawili, Bula Camarines Sur</span>
-        <img src="contact-us-asset/Business_Time.svg" alt="">
+        </div>
+        <div class="time">
+            <img src="pages/contact-us-asset/Business_Time.svg" alt="">
             <span>Monday- friday (7:30 am - 5:00pm)</span>
+        </div>
     </div>
 
    
