--- a/mobile/pages/contact-us.html
+++ b/mobile/pages/contact-us.html
@@ -9,7 +9,7 @@
         </div>
         <div class="phone">
             <img src="pages/contact-us-asset/contact.svg" alt="">
-            <span>+63********* </span>
+            <span>(+63) 950-613-3018</span>
         </div>
         <div class="address">
             <img src="pages/contact-us-asset/location.svg" alt="">
@@ -17,7 +17,7 @@
         </div>
         <div class="time">
             <img src="pages/contact-us-asset/Business_Time.svg" alt="">
-            <span>Monday- friday (7:30 am - 5:00pm)</span>
+            <span>Monday- Friday (7:30 am - 5:00pm)</span>
         </div>
     </div>
 
