--- a/mobile/pages/contact-us.html
+++ b/mobile/pages/contact-us.html
@@ -17,7 +17,7 @@
         </div>
         <div class="time">
             <img src="pages/contact-us-asset/Business_Time.svg" alt="">
-            <span>Monday- Friday (7:30 am - 5:00pm)</span>
+            <span>Monday- Friday (7:30AM - 5:00PM)</span>
         </div>
     </div>
 
