email_change_happy?

--- a/mobile/pages/contact-us.html
+++ b/mobile/pages/contact-us.html
@@ -5,7 +5,7 @@
     <div class="information">
         <div class="email">
             <img src="pages/contact-us-asset/email.svg" alt="">
-            <span>@emfurniture.com</span>
+            <span>emfurnitureph@gmail.com</span>
         </div>
         <div class="phone">
             <img src="pages/contact-us-asset/contact.svg" alt="">
