--- a/mobile/pages/contact-us.html
+++ b/mobile/pages/contact-us.html
@@ -4,22 +4,20 @@
         <p>We’d love to hear from you! Whether you have a question about our products, need assistance with an order, or want to discuss customization option, our team is here to help. </p></div>
     <div class="information">
         <div class="email">
-            <img src="pages/contact-us-asset/email.svg" alt="">
+            <img src="pages/contact-us-asset/email.svg" alt="email">
             <span>emfurnitureph@gmail.com</span>
         </div>
         <div class="phone">
-            <img src="pages/contact-us-asset/contact.svg" alt="">
+            <img src="pages/contact-us-asset/contact.svg" alt="phone">
             <span>(+63) 950-613-3018</span>
         </div>
         <div class="address">
-            <img src="pages/contact-us-asset/location.svg" alt="">
+            <img src="pages/contact-us-asset/location.svg" alt="address">
             <span>Pawili, Bula Camarines Sur</span>
         </div>
         <div class="time">
-            <img src="pages/contact-us-asset/Business_Time.svg" alt="">
+            <img src="pages/contact-us-asset/Business_Time.svg" alt="time">
             <span>Monday- Friday (7:30AM - 5:00PM)</span>
         </div>
     </div>
-
-   
 </div>
